--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>画像放り込みシンプル表作成</title>
     <link rel="icon" href="favicon2.png">
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- ★ 修正点: Font Awesomeのライブラリを追加 -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -68,13 +70,9 @@
     <header class="bg-white shadow-md p-2 flex items-center justify-between z-20">
         <h1 class="text-xl font-bold text-gray-700" data-lang-key="app-title">画像放り込みシンプル表作成</h1>
         <div class="flex items-center space-x-2">
-            <button id="fullscreen-btn" class="p-2 rounded-lg shadow-md transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 text-gray-600 bg-gray-200 hover:bg-gray-300 focus:ring-gray-400" title="全画面表示">
-                <svg id="fullscreen-icon-expand" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M4 8V4m0 0h4M4 4l5 5m11-1V4m0 0h-4m4 0l-5 5M4 16v4m0 0h4m-4 0l5-5m11 1v4m0 0h-4m4 0l-5-5" />
-                </svg>
-                <svg id="fullscreen-icon-collapse" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M15 19v-4m0 0h-4m4 0l-5-5M5 5v4m0 0h4M5 9l5-5M15 5v4m0 0h-4m4 0l-5 5M5 19v-4m0 0h4m-4 0l5-5" />
-                </svg>
+            <!-- ★ 修正点: 全画面表示ボタンの見た目を変更 -->
+            <button id="fullscreen-btn" class="p-2 rounded-lg shadow-md transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 text-gray-600 bg-gray-200 hover:bg-gray-300 focus:ring-gray-400 w-11 h-11 flex items-center justify-center" title="全画面表示">
+                <i id="fullscreen-icon" class="fas fa-expand"></i>
             </button>
             <div class="border-l h-6 border-gray-300 mx-2"></div>
             <button id="export-image-btn" class="px-4 py-2 rounded-lg shadow-md transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 text-white bg-gray-500 hover:bg-gray-600 focus:ring-gray-400" data-lang-key="export">画像出力</button>
@@ -358,6 +356,10 @@
                     <div class="p-2 bg-gray-100 rounded">
                         <h3 class="font-bold" data-lang-key="help-title-export"></h3>
                         <p class="mt-1" data-lang-key="help-desc-export"></p>
+                    </div>
+                     <div class="p-2 bg-gray-100 rounded">
+                        <h3 class="font-bold" data-lang-key="help-title-fullscreen"></h3>
+                        <p class="mt-1" data-lang-key="help-desc-fullscreen"></p>
                     </div>
                 </div>
             </div>
@@ -1704,6 +1706,7 @@ class UIManager {
                 'help-title-delete-img': '画像削除', 'help-desc-delete-img': '画像にマウスを乗せると右上に表示される×ボタンで削除します。',
                 'help-title-save-load': '保存と呼び出し', 'help-desc-save-load': '「保存」ボタンで現在の状態をファイル(.json)に保存（ダウンロード）します。「呼び出し」ボタンでファイルを読み込んで復元できます。',
                 'help-title-export': '画像出力', 'help-desc-export': '上部の「画像出力」ボタンで、現在のフィールドを一枚の画像として保存（ダウンロード）できます。',
+                'help-title-fullscreen': '全画面表示', 'help-desc-fullscreen': 'ヘッダー右上のボタンから全画面表示の切り替えができます。OBSのウィンドウキャプチャで利用する際は、この機能でブラウザのUI（URLバーなど）を非表示にすることを推奨します。',
                 'export-title': '画像出力', 'export-width': '出力幅 (px)',
                 'export-format': 'フォーマット', 'cancel': 'キャンセル', 'export-confirm': '出力', 'export-area-label': '出力範囲:', 'confirm-reset': 'このセクションの設定を初期状態に戻しますか？',
                 'show-grid': 'グリッドを表示', 'field-settings': 'フィールド設定', 'bg-settings': '背景設定', 'bg-drop-text': 'ここに背景画像をドロップ', 'bg-opacity': '画像透過度', 'bg-scale': '拡大率', 'bg-pos-xy': '位置（横/縦）',
@@ -1714,6 +1717,7 @@ class UIManager {
                 'auto-adjust': '画像を自動で整列',
                 'export-transparent-bg': '背景を透過する (PNGのみ)',
                 'zoom-level': '表示倍率',
+                // ★ 修正点: 翻訳キーを追加
                 'fullscreen': '全画面表示',
                 'fullscreen-exit': '全画面表示を解除'
             },
@@ -1732,6 +1736,7 @@ class UIManager {
                 'help-title-delete-img': 'Deleting Images', 'help-desc-delete-img': 'Delete an image by clicking the "x" button that appears in the upper right corner when you mouse over it.',
                 'help-title-save-load': 'Saving and Loading', 'help-desc-save-load': 'Save the current state to a file (.json) with the "Save" button (download). You can restore it by loading the file with the "Load" button.',
                 'help-title-export': 'Exporting Images', 'help-desc-export': 'You can save (download) the current field as a single image with the "Export Image" button at the top.',
+                 'help-title-fullscreen': 'Fullscreen Display', 'help-desc-fullscreen': 'You can toggle fullscreen display from the button in the upper right corner of the header. When using with OBS window capture, it is recommended to use this feature to hide the browser UI (URL bar, etc.).',
                 'export-title': 'Export Image', 'export-width': 'Export Width (px)',
                 'export-format': 'Format', 'cancel': 'Cancel', 'export-confirm': 'Export', 'export-area-label': 'Export Area:',
                 'show-grid': 'Show Grid', 'field-settings': 'Field Settings', 'bg-settings': 'Background Settings', 'bg-drop-text': 'Drop background image here', 'bg-opacity': 'Image Opacity', 'bg-scale': 'Scale', 'bg-pos-xy': 'Position (X/Y)',
@@ -1742,6 +1747,7 @@ class UIManager {
                 'auto-adjust': 'Auto Align Images',
                 'export-transparent-bg': 'Transparent Background (PNG only)',
                 'zoom-level': 'Zoom Level',
+                 // ★ 修正点: 翻訳キーを追加
                 'fullscreen': 'Enter Fullscreen',
                 'fullscreen-exit': 'Exit Fullscreen'
             }
@@ -1767,10 +1773,8 @@ class UIManager {
             this.app.canvasManager.autoAdjustLayout();
         });
 
+        // ★ 修正点: 全画面表示ボタンのイベントリスナー
         const fullscreenBtn = document.getElementById('fullscreen-btn');
-        const expandIcon = document.getElementById('fullscreen-icon-expand');
-        const collapseIcon = document.getElementById('fullscreen-icon-collapse');
-
         fullscreenBtn.addEventListener('click', () => {
             if (!document.fullscreenElement) {
                 document.documentElement.requestFullscreen().catch(err => {
@@ -1782,11 +1786,16 @@ class UIManager {
                 }
             }
         });
-
         document.addEventListener('fullscreenchange', () => {
             const isFullscreen = !!document.fullscreenElement;
-            expandIcon.classList.toggle('hidden', isFullscreen);
-            collapseIcon.classList.toggle('hidden', !isFullscreen);
+            const icon = document.getElementById('fullscreen-icon');
+            if (isFullscreen) {
+                icon.classList.remove('fa-expand');
+                icon.classList.add('fa-compress');
+            } else {
+                icon.classList.remove('fa-compress');
+                icon.classList.add('fa-expand');
+            }
             this.setLanguage(this.app.settings.config.language);
         });
 
